[gd_scene load_steps=14 format=3 uid="uid://b7tj35qh6cr0e"]

[ext_resource type="Script" path="res://scripts/game/match_shadow/match_shadow_stage.gd" id="1_ikla8"]
[ext_resource type="Texture2D" uid="uid://bai0aqu0yhnvp" path="res://assets/old_1/Flores/1.png" id="2_8p5qv"]
[ext_resource type="Texture2D" uid="uid://cjfw6ki0hvepk" path="res://assets/old_1/Flores/2.png" id="3_qgpnf"]
[ext_resource type="Texture2D" uid="uid://daxa005p86ojh" path="res://assets/old_1/Flores/3.png" id="4_2hc5x"]
[ext_resource type="Script" path="res://scripts/game/match_shadow/sprite_pair.gd" id="5_xbvkh"]
[ext_resource type="Script" path="res://scripts/game/match_shadow/light_sprite.gd" id="6_xx1hy"]
[ext_resource type="Texture2D" uid="uid://cbo1y2t6ytxma" path="res://icon.svg" id="7_govcc"]
[ext_resource type="Script" path="res://scripts/game/match_shadow/shadow_sprite.gd" id="8_faak5"]
[ext_resource type="Shader" path="res://scenes/test/match_shadow.gdshader" id="9_kpl8k"]
[ext_resource type="Texture2D" uid="uid://7juysqlmgorn" path="res://assets/old_1/Background2.jpg" id="10_yn7y0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mj53u"]
size = Vector2(128, 128)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lk2bo"]
shader = ExtResource("9_kpl8k")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fxon0"]
size = Vector2(130, 126)

[node name="MatchFlowers" type="Node2D"]
script = ExtResource("1_ikla8")
images = Array[Texture2D]([ExtResource("2_8p5qv"), ExtResource("3_qgpnf"), ExtResource("4_2hc5x")])
next_scene = "res://scenes/main_menu.tscn"

[node name="MatchPairs" type="Node" parent="."]

[node name="Pair3" type="Node" parent="MatchPairs"]
script = ExtResource("5_xbvkh")

[node name="original_body" type="CharacterBody2D" parent="MatchPairs/Pair3"]
z_index = 1
position = Vector2(186, 130)
input_pickable = true
script = ExtResource("6_xx1hy")

[node name="Sprite2D" type="Sprite2D" parent="MatchPairs/Pair3/original_body"]
texture = ExtResource("7_govcc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MatchPairs/Pair3/original_body"]
shape = SubResource("RectangleShape2D_mj53u")

[node name="shadow_body" type="Area2D" parent="MatchPairs/Pair3"]
position = Vector2(934, 127)
script = ExtResource("8_faak5")

[node name="Sprite2D" type="Sprite2D" parent="MatchPairs/Pair3/shadow_body"]
material = SubResource("ShaderMaterial_lk2bo")
texture = ExtResource("7_govcc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MatchPairs/Pair3/shadow_body"]
shape = SubResource("RectangleShape2D_fxon0")

[node name="Pair2" type="Node" parent="MatchPairs"]
script = ExtResource("5_xbvkh")

[node name="original_body" type="CharacterBody2D" parent="MatchPairs/Pair2"]
z_index = 1
position = Vector2(181, 298)
input_pickable = true
script = ExtResource("6_xx1hy")

[node name="Sprite2D" type="Sprite2D" parent="MatchPairs/Pair2/original_body"]
texture = ExtResource("7_govcc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MatchPairs/Pair2/original_body"]
shape = SubResource("RectangleShape2D_mj53u")

[node name="shadow_body" type="Area2D" parent="MatchPairs/Pair2"]
position = Vector2(929, 295)
script = ExtResource("8_faak5")

[node name="Sprite2D" type="Sprite2D" parent="MatchPairs/Pair2/shadow_body"]
material = SubResource("ShaderMaterial_lk2bo")
texture = ExtResource("7_govcc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MatchPairs/Pair2/shadow_body"]
shape = SubResource("RectangleShape2D_fxon0")

[node name="Pair" type="Node" parent="MatchPairs"]
script = ExtResource("5_xbvkh")

[node name="original_body" type="CharacterBody2D" parent="MatchPairs/Pair"]
z_index = 1
position = Vector2(180, 483)
input_pickable = true
script = ExtResource("6_xx1hy")

[node name="Sprite2D" type="Sprite2D" parent="MatchPairs/Pair/original_body"]
texture = ExtResource("7_govcc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MatchPairs/Pair/original_body"]
shape = SubResource("RectangleShape2D_mj53u")

[node name="shadow_body" type="Area2D" parent="MatchPairs/Pair"]
position = Vector2(928, 480)
script = ExtResource("8_faak5")

[node name="Sprite2D" type="Sprite2D" parent="MatchPairs/Pair/shadow_body"]
material = SubResource("ShaderMaterial_lk2bo")
texture = ExtResource("7_govcc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MatchPairs/Pair/shadow_body"]
shape = SubResource("RectangleShape2D_fxon0")

[node name="Background2" type="Sprite2D" parent="."]
position = Vector2(590.5, 333.25)
scale = Vector2(2.70444, 2.33276)
texture = ExtResource("10_yn7y0")

[connection signal="mouse_entered" from="MatchPairs/Pair3/original_body" to="MatchPairs/Pair3/original_body" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MatchPairs/Pair3/original_body" to="MatchPairs/Pair3/original_body" method="_on_mouse_exited"]
[connection signal="body_entered" from="MatchPairs/Pair3/shadow_body" to="MatchPairs/Pair3/shadow_body" method="_on_body_entered"]
[connection signal="mouse_entered" from="MatchPairs/Pair3/shadow_body" to="MatchPairs/Pair3/shadow_body" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MatchPairs/Pair3/shadow_body" to="MatchPairs/Pair3/shadow_body" method="_on_mouse_exited"]
[connection signal="object_dropped_within" from="MatchPairs/Pair3/shadow_body" to="MatchPairs/Pair3" method="_attempt_complete"]
[connection signal="input_event" from="MatchPairs/Pair2/original_body" to="MatchPairs/Pair2/original_body" method="_on_rigid_body_2d_input_event"]
[connection signal="mouse_entered" from="MatchPairs/Pair2/original_body" to="MatchPairs/Pair2/original_body" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MatchPairs/Pair2/original_body" to="MatchPairs/Pair2/original_body" method="_on_mouse_exited"]
[connection signal="body_entered" from="MatchPairs/Pair2/shadow_body" to="MatchPairs/Pair2/shadow_body" method="_on_body_entered"]
[connection signal="mouse_entered" from="MatchPairs/Pair2/shadow_body" to="MatchPairs/Pair2/shadow_body" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MatchPairs/Pair2/shadow_body" to="MatchPairs/Pair2/shadow_body" method="_on_mouse_exited"]
[connection signal="object_dropped_within" from="MatchPairs/Pair2/shadow_body" to="MatchPairs/Pair2" method="_attempt_complete"]
[connection signal="input_event" from="MatchPairs/Pair/original_body" to="MatchPairs/Pair/original_body" method="_on_rigid_body_2d_input_event"]
[connection signal="mouse_entered" from="MatchPairs/Pair/original_body" to="MatchPairs/Pair/original_body" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MatchPairs/Pair/original_body" to="MatchPairs/Pair/original_body" method="_on_mouse_exited"]
[connection signal="body_entered" from="MatchPairs/Pair/shadow_body" to="MatchPairs/Pair/shadow_body" method="_on_body_entered"]
[connection signal="mouse_entered" from="MatchPairs/Pair/shadow_body" to="MatchPairs/Pair/shadow_body" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MatchPairs/Pair/shadow_body" to="MatchPairs/Pair/shadow_body" method="_on_mouse_exited"]
[connection signal="object_dropped_within" from="MatchPairs/Pair/shadow_body" to="MatchPairs/Pair" method="_attempt_complete"]
